Added some sort of canvas

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,7 +13,9 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="Canvas" name="canvas">
+   <layout class="QVBoxLayout" name="verticalLayout"/>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
@@ -85,6 +87,12 @@
    <class>TimelineWidget</class>
    <extends>QWidget</extends>
    <header>timelinewidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>Canvas</class>
+   <extends>QWidget</extends>
+   <header>canvas.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
