--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,9 +13,7 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="Canvas" name="canvas">
-   <layout class="QVBoxLayout" name="verticalLayout"/>
-  </widget>
+  <widget class="Canvas" name="canvas"/>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
